fix: resolve version for aws s3